dfir_rs/tests/compile-fail-stable/surface_lattice_reduce_wronggeneric.stderr
error: `lattice_reduce` should have exactly 0 generic type arguments, actually has 1.
 --> tests/compile-fail-stable/surface_lattice_reduce_wronggeneric.rs:7:42
  |
7 |             -> lattice_reduce::<'static, SetUnionHashSet<u32>>()
  |                                          ^^^^^^^^^^^^^^^

warning: unused import: `dfir_rs::lattices::set_union::SetUnionHashSet`
 --> tests/compile-fail-stable/surface_lattice_reduce_wronggeneric.rs:2:5
  |
2 | use dfir_rs::lattices::set_union::SetUnionHashSet;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
